new guide and improvements to patterns and ndefs

--- a/moduleplan.htm
+++ b/moduleplan.htm
@@ -557,8 +557,8 @@ td
 
 <body link="#0563C1" vlink="#954F72">
 
-<table border=0 cellpadding=0 cellspacing=0 width=1253 style='border-collapse:
- collapse;table-layout:fixed;width:942pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1245 style='border-collapse:
+ collapse;table-layout:fixed;width:936pt'>
  <col width=105 style='mso-width-source:userset;mso-width-alt:3370;width:79pt'>
  <col width=120 style='mso-width-source:userset;mso-width-alt:3840;width:90pt'>
  <col width=113 span=2 style='mso-width-source:userset;mso-width-alt:3626;
@@ -567,7 +567,7 @@ td
  <col width=116 style='mso-width-source:userset;mso-width-alt:3712;width:87pt'>
  <col width=113 span=2 style='mso-width-source:userset;mso-width-alt:3626;
  width:85pt'>
- <col width=125 style='mso-width-source:userset;mso-width-alt:4010;width:94pt'>
+ <col width=117 style='mso-width-source:userset;mso-width-alt:3754;width:88pt'>
  <col width=113 span=2 style='mso-width-source:userset;mso-width-alt:3626;
  width:85pt'>
  <tr height=35 style='height:26.0pt'>
@@ -578,7 +578,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -591,7 +591,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
@@ -604,7 +604,7 @@ td
   <td class=xl69 width=116 style='width:87pt'>&nbsp;</td>
   <td class=xl70 width=113 style='border-left:none;width:85pt'>WEEK 4</td>
   <td class=xl68 width=113 style='width:85pt'>&nbsp;</td>
-  <td class=xl69 width=125 style='width:94pt'>&nbsp;</td>
+  <td class=xl69 width=117 style='width:88pt'>&nbsp;</td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
@@ -622,7 +622,7 @@ td
   30.1</td>
   <td class=xl72 width=113 style='border-top:none;border-left:none;width:85pt'>Tue
   31.1</td>
-  <td class=xl72 width=125 style='border-top:none;border-left:none;width:94pt'>Fri
+  <td class=xl72 width=117 style='border-top:none;border-left:none;width:88pt'>Fri
   3.2</td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
@@ -640,10 +640,10 @@ td
   and Ndefs</td>
   <td class=xl77 width=113 style='border-top:none;border-left:none;width:85pt'>Tutorials
   (1)</td>
-  <td class=xl74 width=113 style='border-top:none;border-left:none;width:85pt'>Human-Computer
-  Interaction</td>
-  <td class=xl74 width=125 style='border-top:none;border-left:none;width:94pt'>Composing
+  <td class=xl74 width=113 style='border-top:none;border-left:none;width:85pt'>Composing
   with Computers 1</td>
+  <td class=xl74 width=117 style='border-top:none;border-left:none;width:88pt'>Human-Computer
+  Interaction</td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
@@ -655,7 +655,7 @@ td
   <td class=xl80 width=116 style='border-top:none;width:87pt'>&nbsp;</td>
   <td class=xl79 width=113 style='border-top:none;width:85pt'>&nbsp;</td>
   <td class=xl80 width=113 style='border-top:none;width:85pt'>&nbsp;</td>
-  <td class=xl81 width=125 style='border-top:none;width:94pt'>&nbsp;</td>
+  <td class=xl81 width=117 style='border-top:none;width:88pt'>&nbsp;</td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=128 style='mso-height-source:userset;height:96.0pt'>
@@ -673,9 +673,9 @@ td
   </span>Coding 1</td>
   <td class=xl77 width=113 style='border-top:none;border-left:none;width:85pt'>Tutorials
   (1)</td>
-  <td class=xl83 width=113 style='border-top:none;width:85pt'>Interfacing</td>
-  <td class=xl75 width=125 style='border-top:none;width:94pt'>Programming
+  <td class=xl75 width=113 style='border-top:none;border-left:none;width:85pt'>Programing
   Concepts 2</td>
+  <td class=xl83 width=117 style='border-top:none;width:88pt'>Interfacing</td>
   <td colspan=2 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
@@ -695,7 +695,7 @@ td
   <td class=xl70 width=116 style='border-left:none;width:87pt'>WEEK 7</td>
   <td class=xl72 width=113 style='width:85pt'>WEEK 9</td>
   <td class=xl70 width=113 style='border-left:none;width:85pt'>WEEKS 9-12</td>
-  <td class=xl68 width=125 style='width:94pt'>&nbsp;</td>
+  <td class=xl68 width=117 style='width:88pt'>&nbsp;</td>
   <td class=xl84 width=113 style='width:85pt'>EASTER BREAK</td>
   <td class=xl85 width=113 style='width:85pt'>WEEK 1<span
   style='mso-spacerun:yes'>&nbsp; </span>Summer Term</td>
@@ -712,7 +712,7 @@ td
   <td class=xl67 width=113 style='border-top:none;border-left:none;width:85pt'>Mon
   6.3</td>
   <td class=xl86 style='border-top:none;border-left:none'>TBC</td>
-  <td class=xl87 width=125 style='border-top:none;width:94pt'>&nbsp;</td>
+  <td class=xl87 width=117 style='border-top:none;width:88pt'>&nbsp;</td>
   <td class=xl88 width=113 style='width:85pt'>&nbsp;</td>
   <td class=xl89 width=113 style='width:85pt'>Tue 18.4</td>
  </tr>
@@ -731,8 +731,8 @@ td
   <td class=xl91 width=113 style='width:85pt'>Tutorials (3)<span
   style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp; </span>9.00-16:00</td>
   <td class=xl92 width=113 style='width:85pt'>Trouble-shooting<span
-  style='mso-spacerun:yes'>&nbsp; </span>Session</td>
-  <td class=xl93 width=125 style='width:94pt'>DEADLINE:<span
+  style='mso-spacerun:yes'>&nbsp; </span>Sessions</td>
+  <td class=xl93 width=117 style='width:88pt'>DEADLINE:<span
   style='mso-spacerun:yes'>&nbsp; </span>Event(s)<span
   style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Date(s) <font
   class="font0">TBC</font><font class="font0"><span
@@ -773,7 +773,7 @@ td
   <td class=xl104 width=116 style='width:87pt'>&nbsp;</td>
   <td class=xl105 width=113 style='width:85pt'>&nbsp;</td>
   <td class=xl106 width=113 style='width:85pt'>&nbsp;</td>
-  <td class=xl107 width=125 style='width:94pt'>&nbsp;</td>
+  <td class=xl107 width=117 style='width:88pt'>&nbsp;</td>
   <td class=xl108 width=113 style='width:85pt'>&nbsp;</td>
   <td class=xl109 width=113 style='width:85pt'>&nbsp;</td>
  </tr>
@@ -783,7 +783,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -796,7 +796,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -809,7 +809,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -822,7 +822,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -836,7 +836,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
@@ -849,7 +849,7 @@ td
   <td class=xl66 width=116 style='width:87pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
-  <td class=xl66 width=125 style='width:94pt'></td>
+  <td class=xl66 width=117 style='width:88pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
   <td class=xl66 width=113 style='width:85pt'></td>
  </tr>
