--- a/Classes/BufRateScale.html
+++ b/Classes/BufRateScale.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,16 +19,16 @@
 <div id='summary'>Buffer rate scaling in respect to server samplerate.</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/SCClassLibrary/Common/Audio/InfoUGens.sc'>InfoUGens.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/BufInfoUGenBase.html">BufInfoUGenBase</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/InfoUGens.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/InfoUGens.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/BufInfoUGenBase.html">BufInfoUGenBase</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/BufChannels.html">BufChannels</a>, <a href="./../Classes/BufDur.html">BufDur</a>, <a href="./../Classes/BufFrames.html">BufFrames</a>, <a href="./../Classes/BufSampleRate.html">BufSampleRate</a>, <a href="./../Classes/BufSamples.html">BufSamples</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*kr'>kr</a>  <a href='#*ir'>ir</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -45,9 +44,9 @@
 <p>Buffer index.</table><h4>Returns:</h4>
 <div class='returnvalue'>
 <p>a ratio by which the playback of a soundfile is to be scaled.</div><h4>Discussion:</h4>
-<div class='warning'><span class='warninglabel'>WARNING:</span> The <code class='code prettyprint lang-sc'>.ir</code> method is not the safest choice. Since a buffer can be reallocated at any time, using <code class='code prettyprint lang-sc'>.ir</code> will not track the changes.</div></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<div class='warning'><span class='warninglabel'>WARNING:</span> The <code class='code prettyprint lang-sc'>.ir</code> method is not the safest choice. Since a buffer can be reallocated at any time, using <code class='code prettyprint lang-sc'>.ir</code> will not track the changes.</div></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>b = Buffer.read(s, Platform.resourceDir +/+ "sounds/a11wlk01.wav");
 
@@ -56,4 +55,4 @@ x = { arg rate=1;
     BufRd.ar(1, b, Phasor.ar(0, BufRateScale.kr(b) * rate, 0, BufFrames.kr(b)))
 }.play;
 )</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/BufRateScale.schelp'>/Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Classes/BufRateScale.schelp</a><br>link::Classes/BufRateScale::<br>sc version: 3.5.5</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/BufRateScale.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/BufRateScale.schelp</a><br>link::Classes/BufRateScale::<br>sc version: 3.8.0</div></div></body></html>
