--- a/Study Guides/Deconstructing SC code.html
+++ b/Study Guides/Deconstructing SC code.html
@@ -29,7 +29,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Example%203'>Example 3</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Example:%20Deconstructing%20code'>Example: Deconstructing code</a></h2>
 
-<p><strong>Carefully explain this piece of code</strong>:<pre class='code prettyprint lang-sc'>{Blip.ar(LFNoise2.kr(10).linexp(-1,1,200,3000),SinOsc.kr(0.1).linlin(-1,1,1,21),0.1)}.play</pre>
+<p><strong>Let's carefully explain this piece of code</strong>:<pre class='code prettyprint lang-sc'>{Blip.ar(LFNoise2.kr(10).linexp(-1,1,200,3000),SinOsc.kr(0.1).linlin(-1,1,1,21),0.1)}.play</pre>
 
 <p>Find the periods (.) in the following code.
 <p><em>What are the different meaning periods may have in this code?</em><ul>
