--- a/Computer.html
+++ b/Computer.html
@@ -26,8 +26,7 @@
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
-<ul class='toc'><li class='toc2'><a href='#Concerts'>Concerts</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Talks'>Talks</a></li>
+<ul class='toc'><li class='toc2'><a href='#Talks'>Talks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
 
@@ -56,14 +55,8 @@
 <p>Replace "Student Name" with your name, and evaluate if you attend the session when taking register<pre class='code prettyprint lang-sc'>Computer.register("Student Name");</pre>
 <h2><a class='anchor' name='News'>News</a></h2>
 
-<p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Concerts'>Concerts</a></h3>
+<p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
-<p>COME TO MY CONCERT ON THE 27 JANUARY AT 7:30pm @ LYONS CONCERT HALL!!
-<p>Live coding, old meets new technology, algorithmic compositions, improvisations, etc.
-<p>More info here:<pre class='code prettyprint lang-sc'>Computer.url("https://www.york.ac.uk/concerts/programme/spiritustelecommunitas/");</pre>
-<h3><a class='anchor' name='Talks'>Talks</a></h3>
-
-<p>25/01/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-aleks-kolkowski/">Research Seminar: Aleks Kolkowski</a>
 <p>15/02/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-nick-collins/">Research Seminar: Nick Collins</a>
 <p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a><h3><a class='anchor' name='Links'>Links</a></h3>
 <pre class='code prettyprint lang-sc'>Computer.url("https://www.mstrcyork.org/"); //Music, Science and Technology Research Cluster (mstrc)
