--- a/Classes/Amplitude.html
+++ b/Classes/Amplitude.html
@@ -1,65 +1,71 @@
-<html><head><title>Amplitude</title><link rel='stylesheet' href='./../scdoc.css' type='text/css' /><link rel='stylesheet' href='./../frontend.css' type='text/css' /><link rel='stylesheet' href='./../custom.css' type='text/css' /><meta http-equiv='Content-Type' content='text/html; charset=UTF-8' /><script src='./../scdoc.js' type='text/javascript'></script><script src='./../docmap.js' type='text/javascript'></script><script src='./../prettify.js' type='text/javascript'></script><script src='./../lang-sc.js' type='text/javascript'></script><script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script><script type='text/javascript'>var helpRoot='./..';</script></head><ul id='menubar'></ul><body onload='fixTOC();prettyPrint()'><div class='contents'><div class='header'><div id='label'>SuperCollider CLASSES</div><div id='categories'><a href='./../Browse.html#UGens>Analysis>Amplitude'>UGens>Analysis>Amplitude</a></div><h1>Amplitude</h1><div id='summary'>Amplitude follower</div></div><div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Compander.sc'>Compander.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div></div><div id='toc'>
+<html><head><title>Amplitude</title>
+<link rel='stylesheet' href='./../scdoc.css' type='text/css' />
+<link rel='stylesheet' href='./../frontend.css' type='text/css' />
+<link rel='stylesheet' href='./../custom.css' type='text/css' />
+<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+<script src='./../scdoc.js' type='text/javascript'></script>
+<script src='./../docmap.js' type='text/javascript'></script>
+<script src='./../prettify.js' type='text/javascript'></script>
+<script src='./../lang-sc.js' type='text/javascript'></script>
+<script type='text/javascript'>var helpRoot='./..';</script>
+</head>
+<ul id='menubar'></ul>
+<body onload='fixTOC();prettyPrint()'>
+<div class='contents'>
+<div class='header'>
+<div id='label'>SuperCollider CLASSES</div>
+<div id='categories'><a href='./../Browse.html#UGens>Analysis>Amplitude'>UGens>Analysis>Amplitude</a></div>
+<h1>Amplitude</h1>
+<div id='summary'>Amplitude follower</div>
+</div>
+<div class='subheader'>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Compander.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Compander.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+</div>
+<div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#inherited_class_methods'>Inherited class methods</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#undocumented_class_methods'>Undocumented class methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-</ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#inherited_instance_methods'>Inherited instance methods</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+</ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+</ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>Tracks the peak amplitude of a signal.
-<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in = 0</span>, <span class='argstr'>attackTime = 0.01</span>, <span class='argstr'>releaseTime = 0.01</span>, <span class='argstr'>mul = 1</span>, <span class='argstr'>add = 0</span>)</h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*kr' href='./../Overviews/Methods.html#kr'>kr</a> (<span class='argstr'>in = 0</span>, <span class='argstr'>attackTime = 0.01</span>, <span class='argstr'>releaseTime = 0.01</span>, <span class='argstr'>mul = 1</span>, <span class='argstr'>add = 0</span>)</h3>
-<div class='method'><h4>Arguments:</h4>
+<p>Tracks the peak amplitude of a signal.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in: 0</span>, <span class='argstr'>attackTime: 0.01</span>, <span class='argstr'>releaseTime: 0.01</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*kr' href='./../Overviews/Methods.html#kr'>kr</a> (<span class='argstr'>in: 0</span>, <span class='argstr'>attackTime: 0.01</span>, <span class='argstr'>releaseTime: 0.01</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
+<div class='method'>
+<p><h4>Arguments:</h4>
 <table class='arguments'>
-<tr><td class='argumentname'> in <td class='argumentdesc'>
-<p>Input signal
-<tr><td class='argumentname'> attackTime <td class='argumentdesc'>
-<p>60dB convergence time for following attacks.
-<tr><td class='argumentname'> releaseTime <td class='argumentdesc'>
-<p>60dB convergence time for following decays.
-</table></div><h3><a class='anchor' name='inherited_class_methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='undocumented_class_methods'>Undocumented class methods</a></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>in</span>)</h3>
-<div class='extmethod'>From extension in <a href='/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/quarks/wslib/wslib-classes/Extensions/UGens/SoftKneeCompressor.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/quarks/wslib/wslib-classes/Extensions/UGens/SoftKneeCompressor.sc</a></div>
-<h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='inherited_instance_methods'>Inherited instance methods</a></h3>
+<tr><td class='argumentname'>in<td class='argumentdesc'>
+<p>Input signal<tr><td class='argumentname'>attackTime<td class='argumentdesc'>
+<p>60dB convergence time for following attacks.<tr><td class='argumentname'>releaseTime<td class='argumentdesc'>
+<p>60dB convergence time for following decays.<tr><td class='argumentname'>mul<td class='argumentdesc'><tr><td class='argumentname'>add<td class='argumentdesc'></table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
-
-<p><pre class='code prettyprint lang-sc'>
-(
-// use input amplitude to control <a class='clslnk' href='./../Classes/SinOsc.html'>SinOsc</a> frequency
+<pre class='code prettyprint lang-sc'>(
+// use input amplitude to control SinOsc frequency
 {
-    <a class='clslnk' href='./../Classes/SinOsc.html'>SinOsc</a>.ar(
-            <a class='clslnk' href='./../Classes/Amplitude.html'>Amplitude</a>.kr(
-                        <a class='clslnk' href='./../Classes/Blip.html'>Blip</a>.ar(3, 20) * <a class='clslnk' href='./../Classes/LFNoise1.html'>LFNoise1</a>.kr(0.1).range(0, 1),
-                        <a class='clslnk' href='./../Classes/MouseX.html'>MouseX</a>.kr(0.001, 1, 1),
-                        <a class='clslnk' href='./../Classes/MouseY.html'>MouseY</a>.kr(0.001, 1, 1),
+    SinOsc.ar(
+            Amplitude.kr(
+                        Blip.ar(3, 20) * LFNoise1.kr(0.1).range(0, 1),
+                        MouseX.kr(0.001, 1, 1),
+                        MouseY.kr(0.001, 1, 1),
                         1200,
                         400
             ),
             0, 0.3)
 }.play;
-)
-</pre>
-
-<p><pre class='code prettyprint lang-sc'>
-// use input amplitude to control <a class='clslnk' href='./../Classes/Pulse.html'>Pulse</a> amplitude - use headphones to prevent feedback.
-{ <a class='clslnk' href='./../Classes/Pulse.html'>Pulse</a>.ar(90, 0.3, <a class='clslnk' href='./../Classes/Amplitude.html'>Amplitude</a>.kr(<a class='clslnk' href='./../Classes/SoundIn.html'>SoundIn</a>.ar(0))) }.play;
-</pre>
-
-<p><pre class='code prettyprint lang-sc'>
-(
-// use input amplitude to control <a class='clslnk' href='./../Classes/SinOsc.html'>SinOsc</a> frequency - use headphones to prevent feedback.
+)</pre>
+<pre class='code prettyprint lang-sc'>// use input amplitude to control Pulse amplitude - use headphones to prevent feedback.
+{ Pulse.ar(90, 0.3, Amplitude.kr(SoundIn.ar(0))) }.play;</pre>
+<pre class='code prettyprint lang-sc'>(
+// use input amplitude to control SinOsc frequency - use headphones to prevent feedback.
 {
-    <a class='clslnk' href='./../Classes/SinOsc.html'>SinOsc</a>.ar(
-            <a class='clslnk' href='./../Classes/Amplitude.html'>Amplitude</a>.kr(
-                        <a class='clslnk' href='./../Classes/SoundIn.html'>SoundIn</a>.ar(0),
+    SinOsc.ar(
+            Amplitude.kr(
+                        SoundIn.ar(0),
                         0.01,
                         0.01,
                         1200,
@@ -67,6 +73,6 @@
             ),
             0, 0.3)
 }.play;
-)
-</pre>
-<div class='doclink'>source: <a href='file:///Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Classes/Amplitude.schelp'>/Users/federicoreuben/Documents/SuperCollider/Fede's/SuperColliderAU/SuperCollider 5.1/SuperCollider.app/Contents/Resources/HelpSource/Classes/Amplitude.schelp</a><br>link::Classes/Amplitude::</div></div></body></html>
+)</pre>
+
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Amplitude.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Amplitude.schelp</a><br>link::Classes/Amplitude::<br>sc version: 3.8.0</div></div></body></html>
