ready for 3 Feb

--- a/Classes/Document.html
+++ b/Classes/Document.html
@@ -47,8 +47,12 @@
 </ul><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 <li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*asyncActions'>asyncActions</a> </li>
+<li class='toc3'><a href='#*closeAllHelp'>closeAllHelp</a> </li>
+<li class='toc3'><a href='#*closeNoPath'>closeNoPath</a> </li>
+<li class='toc3'><a href='#*closeObsolete'>closeObsolete</a> </li>
 <li class='toc3'><a href='#*executeAsyncResponse'>executeAsyncResponse</a> </li>
 <li class='toc3'><a href='#*findByQUuid'>findByQUuid</a> </li>
+<li class='toc3'><a href='#*openStartup'>openStartup</a> </li>
 <li class='toc3'><a href='#*prCurrent'>prCurrent</a> </li>
 <li class='toc3'><a href='#*setActiveDocByQUuid'>setActiveDocByQUuid</a> </li>
 <li class='toc3'><a href='#*syncDocs'>syncDocs</a> </li>
@@ -249,10 +253,18 @@ Document.standardizePath("Patches/newfoots/fastRuckAndTuck")
 <div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*asyncActions' href='./../Overviews/Methods.html#asyncActions'>asyncActions</a> </h3>
 <div class='supmethod'>From implementing class</div>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*closeAllHelp' href='./../Overviews/Methods.html#closeAllHelp'>closeAllHelp</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc</a></div>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*closeNoPath' href='./../Overviews/Methods.html#closeNoPath'>closeNoPath</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc</a></div>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*closeObsolete' href='./../Overviews/Methods.html#closeObsolete'>closeObsolete</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-closeAllHelp.sc</a></div>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*executeAsyncResponse' href='./../Overviews/Methods.html#executeAsyncResponse'>executeAsyncResponse</a> (<span class='argstr'>funcID</span> <span class='argstr'>... args</span>)</h3>
 <div class='supmethod'>From implementing class</div>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*findByQUuid' href='./../Overviews/Methods.html#findByQUuid'>findByQUuid</a> (<span class='argstr'>quuid</span>)</h3>
 <div class='supmethod'>From implementing class</div>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*openStartup' href='./../Overviews/Methods.html#openStartup'>openStartup</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-openStartup.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Workflow/extDocument-openStartup.sc</a></div>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*prCurrent' href='./../Overviews/Methods.html#prCurrent'>prCurrent</a> = <span class='argstr'>newCurrent</span></h3>
 <div class='supmethod'>From implementing class</div>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*setActiveDocByQUuid' href='./../Overviews/Methods.html#setActiveDocByQUuid'>setActiveDocByQUuid</a> (<span class='argstr'>quuid</span>)</h3>
