--- a/Computer.html
+++ b/Computer.html
@@ -25,6 +25,7 @@
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Talks'>Talks</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
@@ -32,16 +33,16 @@
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
 
 <p><dt>Seminars<dd><ul>
-<li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a></ul>
+<li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a></ul>
 
 <p><dt>Workshops<dd><ul>
-<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a></ul>
+<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a><li><a href="./Workshops/Patterns and Ndefs.html">Patterns and Ndefs</a><li><a href="./Workshops/Programming Concepts 2.html">Programming Concepts 2</a></ul>
 
 <p><dt>Study Guides<dd><ul>
 <li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a></ul>
 
 <p><dt>Code Examples<dd><ul>
-<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a></ul>
+<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a></ul>
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
@@ -51,7 +52,11 @@
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
 <p>15/02/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-nick-collins/">Research Seminar: Nick Collins</a>
-<p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a><h3><a class='anchor' name='Links'>Links</a></h3>
+<p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a><h3><a class='anchor' name='Events'>Events</a></h3>
+
+<p>10/03/2017 Christina Kubisch: Electrical Walks in Manchester<pre class='code prettyprint lang-sc'>Computer.url("https://www.eventbrite.co.uk/e/cut-splice-festival-2017-manchester-electrical-walks-with-christina-kubisch-tickets-31260707618");</pre>
+
+<p><h3><a class='anchor' name='Links'>Links</a></h3>
 <pre class='code prettyprint lang-sc'>Computer.url("https://www.mstrcyork.org/"); //Music, Science and Technology Research Cluster (mstrc)
 Computer.url("https://www.mstrcyork.org/technologies-for-musical-creativity/"); //Technologies for Musical Creativity Group (TMCG)
 Computer.url("https://algorave.com/"); //Algoraves, next on the 28/03 in Leeds
