--- a/Seminars/Introduction to ComputerDotPlay.html
+++ b/Seminars/Introduction to ComputerDotPlay.html
@@ -19,7 +19,7 @@
 <div id='summary'>Computer.play(Music, Creativity &amp; Code)</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Handbook.html">Handbook</a></div>
+<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Seminars/Composing with Computers 1.html">Composing with Computers 1</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
