--- a/Classes/Boolean.html
+++ b/Classes/Boolean.html
@@ -19,15 +19,15 @@
 <div id='summary'>abstract class whose instances represent a logical value</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/Boolean.sc'>Boolean.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Boolean.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Boolean.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/False.html">False</a>, <a href="../Classes/True.html">True</a></div>
 <div id='related'>See also: <a href="./../Reference/Control-Structures.html">Control Structures</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc3'><a href='#*newCopyArgs'>newCopyArgs</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
@@ -44,14 +44,16 @@
 <li class='toc3'><a href='#-asBoolean'>asBoolean</a> </li>
 <li class='toc3'><a href='#-booleanValue'>booleanValue</a> </li>
 <li class='toc3'><a href='#-keywordWarnings'>keywordWarnings</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-guiClass'>guiClass</a> </li>
+<li class='toc3'><a href='#-isValidUGenInput'>isValidUGenInput</a> </li>
+<li class='toc3'><a href='#-writeInputSpec'>writeInputSpec</a> </li>
 </ul></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Boolean is the superclass of <a href="./../Classes/True.html">True</a> and <a href="./../Classes/False.html">False</a> which are the concrete realizations. In code True and False are represented by the literal values <code class='code prettyprint lang-sc'>true</code> and <code class='code prettyprint lang-sc'>false</code>.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*newCopyArgs' href='./../Overviews/Methods.html#newCopyArgs'>newCopyArgs</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
@@ -92,8 +94,12 @@
 <div class='returnvalue'>
 <p>The receiver. The same message is understood by <a href="./../Classes/SimpleNumber.html">SimpleNumber</a> and can be used to convert it to boolean.</div></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-keywordWarnings' href='./../Overviews/Methods.html#keywordWarnings'>keywordWarnings</a> </h3>
 <div class='method'>
-<p>turn on/off warnings if a keyword argument is not found</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>turn on/off warnings if a keyword argument is not found</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-guiClass' href='./../Overviews/Methods.html#guiClass'>guiClass</a> </h3>
-<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/guicrucial/gui.sc'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/guicrucial/gui.sc</a></div>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Boolean.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Boolean.schelp</a><br>link::Classes/Boolean::<br>sc version: 3.7.2</div></div></body></html>
+<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/guicrucial/gui.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/guicrucial/gui.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-isValidUGenInput' href='./../Overviews/Methods.html#isValidUGenInput'>isValidUGenInput</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extBoolean-asUGenInput.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extBoolean-asUGenInput.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-writeInputSpec' href='./../Overviews/Methods.html#writeInputSpec'>writeInputSpec</a> (<span class='argstr'>file</span>, <span class='argstr'>synth</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extBoolean-asUGenInput.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extBoolean-asUGenInput.sc</a></div>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Boolean.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Boolean.schelp</a><br>link::Classes/Boolean::<br>sc version: 3.8.0</div></div></body></html>
