--- a/Classes/LFSaw.html
+++ b/Classes/LFSaw.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,7 +19,7 @@
 <div id='summary'>Sawtooth oscillator</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Osc.sc'>Osc.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Osc.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/Osc.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/PureUGen.html">PureUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/LFCub.html">LFCub</a>, <a href="../Classes/LFPar.html">LFPar</a>, <a href="../Classes/LFTri.html">LFTri</a></div>
 <div id='related'>See also: <a href="./../Classes/LFCub.html">LFCub</a>, <a href="./../Classes/LFPar.html">LFPar</a>, <a href="./../Classes/LFPulse.html">LFPulse</a>, <a href="./../Classes/LFTri.html">LFTri</a>, <a href="./../Classes/Saw.html">Saw</a></div>
 </div>
@@ -28,9 +27,9 @@
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -42,14 +41,30 @@
 <table class='arguments'>
 <tr><td class='argumentname'>freq<td class='argumentdesc'>
 <p>Frequency in Hertz.<tr><td class='argumentname'>iphase<td class='argumentdesc'>
-<p>Initial phase offset. For efficiency reasons this is a value ranging from 0 to 2.<tr><td class='argumentname'>mul<td class='argumentdesc'>
+<p>Initial phase offset. For efficiency reasons this is a value ranging from 0 to 2.<div class='note'><span class='notelabel'>NOTE:</span> enter "1" for an initial phase of 0 radiants. A value of 0 would start the cycle at pi radiants. See the example below.</div><tr><td class='argumentname'>mul<td class='argumentdesc'>
 <p>Output will be multiplied by this value.<tr><td class='argumentname'>add<td class='argumentdesc'>
-<p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>{ LFSaw.ar(500, 1, 0.1) }.play
 
 // used as both Oscillator and LFO:
 { LFSaw.ar(LFSaw.kr(4, 0, 200, 400), 0, 0.1) }.play</pre>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/LFSaw.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/LFSaw.schelp</a><br>link::Classes/LFSaw::<br>sc version: 3.5.5</div></div></body></html>
+
+<p>Display special behaviour of initial phase parameter:<pre class='code prettyprint lang-sc'>// 0.15 seconds of 3-channel buffer
+b = Buffer.alloc(s, s.sampleRate * 0.15, 3);
+
+(
+// generate Signal
+m = SynthDef ("help-lfsawphase", {|rate = 20|
+    var l;
+    l = LFSaw.ar(rate, [0, 1, 2]); // three channels, three phases
+    RecordBuf.ar(l, b, doneAction: 2, loop: 0);
+    Out.ar(0, l * -20.dbamp);
+}).play(s);
+)
+
+b.plot;    // see the difference</pre>
+
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/LFSaw.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/LFSaw.schelp</a><br>link::Classes/LFSaw::<br>sc version: 3.8.0</div></div></body></html>
