--- a/Classes/MIDIEndPoint.html
+++ b/Classes/MIDIEndPoint.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,34 +19,34 @@
 <div id='summary'>(Undocumented class)</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/<a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIOut.sc'>MIDIOut.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIOut.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIOut.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-asMIDIInPortUID'>asMIDIInPortUID</a> </li>
 <li class='toc3'><a href='#-device'>device</a> </li>
 <li class='toc3'><a href='#-name'>name</a> </li>
 <li class='toc3'><a href='#-printOn'>printOn</a> </li>
 <li class='toc3'><a href='#-uid'>uid</a> </li>
-</ul></ul><li class='toc1'><a href='#Help template'>Help template</a></li>
+</ul></ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>This class is missing documentation.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>device</span>, <span class='argstr'>name</span>, <span class='argstr'>uid</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asMIDIInPortUID' href='./../Overviews/Methods.html#asMIDIInPortUID'>asMIDIInPortUID</a> </h3>
-<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/asMIDIPort.sc'>/Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/asMIDIPort.sc</a></div>
+<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/asMIDIPort.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/asMIDIPort.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-device' href='./../Overviews/Methods.html#device'>device</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-device' href='./../Overviews/Methods.html#device'>device</a> = value</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-name' href='./../Overviews/Methods.html#name'>name</a></h3>
@@ -55,7 +54,7 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-printOn' href='./../Overviews/Methods.html#printOn'>printOn</a> (<span class='argstr'>stream</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-uid' href='./../Overviews/Methods.html#uid'>uid</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-uid' href='./../Overviews/Methods.html#uid'>uid</a> = value</h3>
-<h2><a class='anchor' name='Help template'>Help template</a></h2>
+<h2><a class='anchor' name='Help%20template'>Help template</a></h2>
 
 <p>Copy and paste the text below and save to HelpSource/Classes/MIDIEndPoint.schelp<pre class='code prettyprint lang-sc'>TITLE:: MIDIEndPoint
 summary:: (put short description here)
@@ -120,4 +119,4 @@ code::
 (some example code)
 ::
 </pre>
-<div class='doclink'>link::Classes/MIDIEndPoint::<br>sc version: 3.6.5</div></div></body></html>
+<div class='doclink'>link::Classes/MIDIEndPoint::<br>sc version: 3.8.0</div></div></body></html>
