--- a/Code Examples/Code for Fun.html
+++ b/Code Examples/Code for Fun.html
@@ -19,7 +19,7 @@
 <div id='summary'>Computer.play(Music, Creativity &amp; Code)</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Workshops/Playing with UGens 1.html">Playing with UGens 1</a>, <a href="./../Workshops/Playing with UGens 2.html">Playing with UGens 2</a></div>
+<div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Workshops/Playing with UGens 1">Playing with UGens 1</a>, <a href="./../Workshops/Playing with UGens 2.html">Playing with UGens 2</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Examples%20of%20Synths'>Examples of Synths</a></li>
