--- a/Guides/UsingMIDI.html
+++ b/Guides/UsingMIDI.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -24,52 +23,36 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Introduction'>Introduction</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Receiving MIDI input'>Receiving MIDI input</a></li>
-<ul class='toc'><li class='toc2'><a href='#MIDIFunc and MIDIdef'>MIDIFunc and MIDIdef</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Receiving%20MIDI%20input'>Receiving MIDI input</a></li>
+<ul class='toc'><li class='toc2'><a href='#MIDIFunc%20and%20MIDIdef'>MIDIFunc and MIDIdef</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#MIDIIn'>MIDIIn</a></li>
-<ul class='toc'></ul></ul><li class='toc1'><a href='#Playing notes on your MIDI keyboard'>Playing notes on your MIDI keyboard</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Sending MIDI out'>Sending MIDI out</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#MIDI synchronization'>MIDI synchronization</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Third party libraries'>Third party libraries</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Playing%20notes%20on%20your%20MIDI%20keyboard'>Playing notes on your MIDI keyboard</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Sending%20MIDI%20out'>Sending MIDI out</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#MIDI%20synchronization'>MIDI synchronization</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Third%20party%20libraries'>Third party libraries</a></li>
 <ul class='toc'></ul></ul></div><a class='anchor' name='kw_MIDI'>&nbsp;</a><h2><a class='anchor' name='Introduction'>Introduction</a></h2>
 
-<p>SuperCollider's out of the box MIDI support is fairly thorough (although not as complete as you'll find in commercial sequencers). All MIDI devices accessible to your operating system (CoreMIDI on OSX, ALSA on Linux, PortMIDI on Windows) are accessible to SuperCollider.<div class='note'><span class='notelabel'>NOTE:</span> This document is written from an OSX perspective. The essential behavior of the MIDI interface classes should be the same on other platforms, despite my continual reference to CoreMIDI here.</div>
-<p>SuperCollider does not impose much higher-level structure on MIDI functionality. The core classes are little more than hardware abstractions (see also the <a href="./../Guides/MIDI.html">MIDI</a> helpfile):<dl>
-<dt><a href="./../Classes/MIDIClient.html">MIDIClient</a><dd>represents SuperCollider's communications with CoreMIDI<dt><a href="./../Classes/MIDIIn.html">MIDIIn</a><dd>receives MIDI messages and executes functions in response to those messages<dt><a href="./../Classes/MIDIOut.html">MIDIOut</a><dd>sends MIDI messages out to a specific port and channel<dt><a href="./../Classes/MIDIEndPoint.html">MIDIEndPoint</a><dd>a client-side representation of a CoreMIDI device, containing three variables (name, device and uid, which is a unique identifier assigned by the system)</dl>
+<p>SuperCollider's out of the box MIDI support is fairly thorough (although not as complete as you'll find in commercial sequencers). All MIDI devices accessible to your operating system (CoreMIDI on OSX, ALSA on Linux, PortMIDI on Windows) are accessible to SuperCollider.
+<p>The main MIDI classes are:<dl>
+<dt><a href="./../Classes/MIDIClient.html">MIDIClient</a><dd>This class connects to the operating system's MIDI layer, and obtains the lists of available MIDI sources and destinations. The information about the hardware is stored in <code class='code prettyprint lang-sc'>MIDIClient.sources</code> and <code class='code prettyprint lang-sc'>MIDIClient.destinations</code> as <a href="./../Classes/MIDIEndPoint.html">MIDIEndPoint</a> objects. MIDIClient must be initialized before MIDI can be received. See the example <a href="#Playing%20notes%20on%20your%20MIDI%20keyboard">Playing%20notes%20on%20your%20MIDI%20keyboard</a>.<dt><a href="./../Classes/MIDIFunc.html">MIDIFunc</a><dd>The optimal way to receive the most typical MIDI messages: note on/off, controller, pitch bend, aftertouch, poly-touch and program change.<dt><a href="./../Classes/MIDIdef.html">MIDIdef</a><dd>Related to <a href="./../Classes/MIDIFunc.html">MIDIFunc</a>, this class keeps several MIDIFunc objects in global storage, by name. Especially helpful for live or interactive use.<dt><a href="./../Classes/MIDIOut.html">MIDIOut</a><dd>Supports MIDI output to hardware ports or inter-application MIDI buses.<dt><a href="./../Classes/MIDIEndPoint.html">MIDIEndPoint</a><dd>Represents a MIDI port published by the operating system. It contains a device name, port name and unique identifier (uid).<dt><a href="./../Classes/MIDIIn.html">MIDIIn</a><dd>The lowest-level MIDI input class. MIDIFunc and MIDIdef use this class so that you don't have to. It is strongly recommended to avoid using this class directly.</dl>
 
-<p>In most cases, each physical MIDI connection (pair of in/out jacks on the MIDI interface) has one MIDIEndPoint object to represent it in the client.<h2><a class='anchor' name='Receiving MIDI input'>Receiving MIDI input</a></h2>
-<h3><a class='anchor' name='MIDIFunc and MIDIdef'>MIDIFunc and MIDIdef</a></h3>
+<p>In most cases, each physical MIDI connection (pair of in/out jacks on the MIDI interface) has one MIDIEndPoint object to represent it in the client.<h2><a class='anchor' name='Receiving%20MIDI%20input'>Receiving MIDI input</a></h2>
+<h3><a class='anchor' name='MIDIFunc%20and%20MIDIdef'>MIDIFunc and MIDIdef</a></h3>
 
-<p>For most uses, the preferred way to receive MIDI input is using the <a href="./../Classes/MIDIFunc.html">MIDIFunc</a> and <a href="./../Classes/MIDIdef.html">MIDIdef</a> classes. The advantage of this approach is that any number of responders can be registered, using extremely flexible matching. (By contrast, using <a href="./../Classes/MIDIIn.html">MIDIIn</a> responder functions directly means that only one function can exist per incoming message type. That is not an ideal programming practice.)
+<p>For most uses, the preferred way to receive MIDI input is using the <a href="./../Classes/MIDIFunc.html">MIDIFunc</a> and <a href="./../Classes/MIDIdef.html">MIDIdef</a> classes. The advantage of this approach is that any number of responders can be registered, using extremely flexible matching.
 <p><a href="./../Classes/MIDIFunc.html">MIDIFunc</a> has a number of convenience methods allowing you to register for the different MIDI message types. It can filter incoming MIDI messages to respond to a particular device, channel number, or specific message number, or ranges thereof.
-<p>See <a href="#playing_notes_on_your_midi_keyboard">Playing notes on your MIDI keyboard</a> below for a simple example using the note-on and note-off MIDIFuncs.<h3><a class='anchor' name='MIDIIn'>MIDIIn</a></h3>
+<p>See <a href="#Playing%20notes%20on%20your%20MIDI%20keyboard">Playing%20notes%20on%20your%20MIDI%20keyboard</a> below for a simple example using the note-on and note-off MIDIFuncs.<h3><a class='anchor' name='MIDIIn'>MIDIIn</a></h3>
 
-<p>MIDIIn has a number of class variables holding functions to be evaluated when a MIDI event comes in. Technical details on each function can be found in the <a href="./../Classes/MIDIIn.html">MIDIIn</a> help file.<ul>
-<li>noteOn<li>noteOff<li>control<li>bend<li>touch<li>polyTouch<li>program<li>sysex<li>sysrt<li>smpte</ul>
-
-<p>To assign a response to a particular kind of MIDI message, assign a function to the class variable:<pre class='code prettyprint lang-sc'>MIDIIn.connect;
-MIDIIn.noteOn = { |port, chan, note, vel| [port, chan, note, vel].postln };
-MIDIIn.noteOn = nil;    // stop responding</pre>
-
-<p>MIDIIn provides the responding functions with all the information coming in from CoreMIDI:<dl>
-<dt>source (src)<dd>corresponds to the uid of the <a href="./../Classes/MIDIEndPoint.html">MIDIEndPoint</a> from which the message is coming.<dt>channel (chan)<dd>integer 0-15 representing the channel bits of the MIDI status byte.</dl>
-
-<p>... with subsequent arguments representing the data bytes. The <a href="./../Classes/MIDIIn.html">MIDIIn</a> help file details all the supported messages along with the arguments of the responding function for the message.
-<p>Because these are class variables, you can have only one function assigned at one time. A common usage is to assign a function that looks up responses in a collection. For example, you could have a separate set of response functions for each channel.<pre class='code prettyprint lang-sc'>~noteOn = Array.fill(16, IdentityDictionary.new);
-MIDIIn.noteOn = { |port, chan, num, vel| ~noteOn[chan].do(_.value(port, chan, num, vel)) };
-
-    // this function will respond only on channel 0
-~noteOn[0].put(\postNoteOn, { |port, chan, num, vel| [port, chan, note, vel].postln });
-~noteOn[0].removeAt(\postNoteOn);    // stop responding</pre>
-
-<p>The advantage of this approach over using "if" or "case" statements in the response function is that you can add and remove responses without having to change the MIDIIn function. The MIDIIn function can serve as a "hook" into another structure that distributes the MIDI events to the real responders.<h2><a class='anchor' name='Playing notes on your MIDI keyboard'>Playing notes on your MIDI keyboard</a></h2>
+<p>MIDIIn has a number of class variables holding functions to be evaluated when a MIDI event comes in. Technical details on each function can be found in the <a href="./../Classes/MIDIIn.html">MIDIIn</a> help file.
+<p>Note, however, that MIDIIn provides no functionality for filtering incoming MIDI based on device, controller number or other factors. This means, for practical use, MIDIIn is significantly harder to use than <a href="./../Classes/MIDIFunc.html">MIDIFunc</a> or <a href="./../Classes/MIDIdef.html">MIDIdef</a>. <strong>It is generally recommended to avoid using MIDIIn directly.</strong> The exceptions are sysex (system exclusive) and sysrt (MIDI clock) messages, which are currently supported only by MIDIIn.<h2><a class='anchor' name='Playing%20notes%20on%20your%20MIDI%20keyboard'>Playing notes on your MIDI keyboard</a></h2>
 
 <p>The technical problem is that every note on needs to save its synth object so that the note off message can end the right server-side node.<pre class='code prettyprint lang-sc'>s.boot;
 
 (
 var notes, on, off;
 
-//MIDIIn.connect;
+MIDIClient.init;
+MIDIIn.connectAll;
 
 notes = Array.newClear(128);    // array has one slot per possible MIDI note
 
@@ -89,20 +72,20 @@ q = { on.free; off.free; };
 q.value;</pre>
 
 <p>The <a href="./../Classes/MIDIIn.html">MIDIIn</a> help file contains a more elaborate example.
-<p>SuperCollider does not have a built-in class to handle this automatically. However, <em>dewdrop_lib</em>, a third party library mentioned <a href="#third_party_libraries">below</a>, includes Voicer (to simplify note on-off bookkeeping) and VoicerMIDISocket (to trigger Voicer notes by MIDI). Users interested in this functionality may wish to examine that library.<h2><a class='anchor' name='Sending MIDI out'>Sending MIDI out</a></h2>
+<p>SuperCollider does not have a built-in class to handle this automatically. However, <em>dewdrop_lib</em>, a third party library mentioned <a href="#Third%20party%20libraries">below</a>, includes Voicer (to simplify note on-off bookkeeping) and VoicerMIDISocket (to trigger Voicer notes by MIDI). Users interested in this functionality may wish to examine that library.<h2><a class='anchor' name='Sending%20MIDI%20out'>Sending MIDI out</a></h2>
 
 <p>See the <a href="./../Classes/MIDIOut.html">MIDIOut</a> helpfile. Unlike MIDIIn, with MIDIOut you create an instance of the MIDIOut class with a port and uid. You can have multiple MIDIOut objects to send MIDI to different physical devices.
-<p>Many users have reported timing issues with MIDIOut. When the CPU is busy, especially during graphics updates, outgoing MIDI messages may be delayed. Use with caution in a performance situation.<h2><a class='anchor' name='MIDI synchronization'>MIDI synchronization</a></h2>
+<p>Many users have reported timing issues with MIDIOut. When the CPU is busy, especially during graphics updates, outgoing MIDI messages may be delayed. Use with caution in a performance situation.<h2><a class='anchor' name='MIDI%20synchronization'>MIDI synchronization</a></h2>
 
 <p>MIDI synchronization may be performed using MIDIIn's sysrt or smpte response functions. It's up to the user to implement the desired kind of synchronization.
 <p>For sysrt, external MIDI clocks output 24 pulses per quarter note. The responder should count the incoming pulses and multiply the rhythmic value into 24 to determine how many pulses to wait:<table>
 <tr><td>0.25<td>wait 6 pulses (16th note)<tr><td>0.5<td>wait 12 pulses (8th note)<tr><td>2<td>wait 48 pulses (half note)</table>
 
 <p>dewdrop_lib (third party library) includes a class, MIDISyncClock, that receives MIDI clock messages and allows events to be scheduled to keep time with an external MIDI device. See the MIDISyncClock helpfile for details.
-<p>There are significant limitations, discussed in the helpfile. This is not really a fully supported class, but it's there for users who need rudimentary MIDI sync functionality.<h2><a class='anchor' name='Third party libraries'>Third party libraries</a></h2>
+<p>There are significant limitations, discussed in the helpfile. This is not really a fully supported class, but it's there for users who need rudimentary MIDI sync functionality.<h2><a class='anchor' name='Third%20party%20libraries'>Third party libraries</a></h2>
 
 <p><em>dewdrop_lib</em> is a third party library providing a number of useful performance features, available through the <a href="./../Classes/Quarks.html">Quarks</a> interface. The library provides a user-extensible framework of MIDI responder classes designed for multiport, multichannel applications.
 <p>Among its features:
 <p>- user-extensible: simple functions may be used, and frequently-needed responses can be written into classes that inherit from the framework (see BasicMIDISocket and BasicMIDIControl helpfiles)
 <p>- easy to use classes for playing MIDI notes and assigning MIDI controllers to synthesis parameters
-<p>- a user-configurable array of MIDI controller numbers, to simplify assignment of events to hardware controllers<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Guides/UsingMIDI.schelp'>/Applications/SuperCollider 3.5.5/SuperCollider 3.5.5.app/Contents/Resources/HelpSource/Guides/UsingMIDI.schelp</a><br>link::Guides/UsingMIDI::<br>sc version: 3.5.5</div></div></body></html>
+<p>- a user-configurable array of MIDI controller numbers, to simplify assignment of events to hardware controllers<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Guides/UsingMIDI.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Guides/UsingMIDI.schelp</a><br>link::Guides/UsingMIDI::<br>sc version: 3.8.0</div></div></body></html>
